# python_weather

./: .gitignore  CMakeLists.txt
data_class/: CMakeLists.txt  GOA_sequence.cpp  GO_Struct.cpp  go_term.cpp  go_term.h  go_type.h  protein.cpp  protein.h  protein_sequence.cpp  protein_sequence.h
data_processing/: CMakeLists.txt
data_processing/select_data_set_main/: CMakeLists.txt  select_data_set_main.cpp
learning/: CMakeLists.txt  evaluation.cpp
unit_test/: CMakeLists.txt
unit_test/unit_test_protein_sequence_main/: unit_test_protein_sequence_main.cpp
weather/: wea.json  wea.txt
weather/weather/: items.py  pipelines.py  settings.py
weather/weather/spiders/: localweather.py
